gateway_demos/files/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: testistio
  labels:
    istio-injection: enabled
