gateway_demos/files/service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
  namespace: testistio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
      - name: nginx
        image: nginx:1.21
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: testistio
spec:
  selector:
    app: hello-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
