gateway_demos/files/route.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-route
  namespace: testistio
spec:
  hosts:
  - "test.example.io"
  gateways:
  - demo-gateway
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: hello-service
        port:
          number: 80
